# vac

./: .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  deny.toml  typos.toml
.config/: nextest.toml
doc/: architecture.md  usage.md
src/: app.rs  cleaner.rs  cli.rs  config.rs  lib.rs  main.rs  scanner.rs  ui.rs  utils.rs
