[package]
name = "vac"
version = "0.4.0"
edition = "2024"
description = "A Mac disk cleanup CLI tool with TUI interface"
license = "MIT"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
color-eyre = "0.6"
directories = "6.0.0"
walkdir = "2.5"
bytesize = "2.3.1"
rayon = "1.11"
toml = "0.9"
serde = { version = "1", features = ["derive"] }
trash = "5.2.5"
clap = { version = "4.5.57", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
